--- a/src/styles.sass
+++ b/src/styles.sass
@@ -134,5 +134,11 @@ body
         &:hover
             text-decoration: (none !important)
             color:(white !important)
-        
 
+.ngb-toasts
+  width:(100% !important)
+  text-align: (center !important)
+  margin: (0 !important)
+
+.toast
+  max-width: (100% !important)
