--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -15,7 +15,9 @@
     <label for="InputBirth" class="col-sm-3 col-form-label">Date of Birth</label>
     <div class="col-sm-9">
       <!-- <input type="text" name="DOB" [(ngModel)]="DateOfBirth" class="form-control" id="InputBirth" placeholder="(YYYY-MM)" (input)="onTextChange()" #DOB="ngModel"> -->
-      <month-date-picker [formattedDate]="DateOfBirth" (dateSelected)="onDateSelected($event)"></month-date-picker>
+      <!-- <month-date-picker [formattedDate]="DateOfBirth" (dateSelected)="onDateSelected($event)"></month-date-picker> -->
+      <month-date-picker-inline
+              (dateSelected)="onDateSelected($event)" [futureYearsOnly]="false"></month-date-picker-inline>
     </div>
   </div>
 
