adding support for images in the editor

--- a/src/app/new-blog-post/new-blog-post.component.html
+++ b/src/app/new-blog-post/new-blog-post.component.html
@@ -15,7 +15,8 @@
 
   <div class="form-group">
     <label for="InputBody">Content</label>
-    <ckeditor name="NewBody" [editor]="Editor" [(ngModel)]="newBlogPost.body" data={{newBlogPost.body}}></ckeditor>
+    <ckeditor name="NewBody" [editor]="Editor" [(ngModel)]="newBlogPost.body" 
+    [config]="editorConfig" data={{newBlogPost.body}}></ckeditor>
   </div>
 
   <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
